# format

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  chars.h  false.h  format.h  format.test.cc
cmake/: mpark_format-config.cmake.in
include/format/: chars.h  format.h  parse.h  range.h
include/mpark/: format.hpp
include/mpark/formats/: lib.hpp  parse.hpp
test/: CMakeLists.txt  README.md  intro.cpp
